--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
 
 </div>
 
+<script src="http://cdn.peerjs.com/0.3/peer.min.js"></script>
 <script src="js/main.js"></script>
+
 
 </body>
 </html>
