Add visual aspect

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <script>
     $("#send").click(function () {
         var id = $("#id_peer").val();
-        //callRemote(id);
+        callRemote(id);
         console.log(id);
         $("#id_peer").val('');
     });
