a saber lo que hemos tocao, pero ha funcionao. lema de la noche. a dormih

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     <div class="mdl-card__actions mdl-card--border">
 
     </div>
+    <audio id="gum-local" controls autoplay></audio>
 
 </div>
 
