More visual aspect 3 pages

--- a/sender.html
+++ b/sender.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hack Surronund</title>
-
+    <title>Hack Surround</title>
     <!-- Material Design Lite -->
     <link href="//fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -28,33 +27,24 @@
 
         firebase.initializeApp(config);
     </script>
-
 </head>
 <body>
-<div id="options">
-    <a href="sender.html">
-        <div class="demo-card-event mdl-card mdl-shadow--2dp">
-            <div class="mdl-card__title mdl-card--expand">
-                <h4 class="display-1">Sender</h4>
-            </div>
-            <div class="mdl-card__menu">
-                <button class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect">
-                    <i class="material-icons">file_upload</i></button>
-            </div>
+<div id="options" class="demo-card-wide mdl-card mdl-shadow--2dp">
+    <div class="demo-card-event mdl-card mdl-shadow--2dp little">
+        <div class="mdl-card__title mdl-card--expand">
+            <h4 class="input">Get Left</h4>
         </div>
-    </a>
-    <a href="receiver.html">
-        <div class="demo-card-event mdl-card mdl-shadow--2dp">
-            <div class="mdl-card__title mdl-card--expand">
-                <h4 class="display-1">Receiver</h4>
-            </div>
-            <div class="mdl-card__menu">
-                <button class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect">
-                    <i class="material-icons">file_download</i></button>
-            </div>
+    </div>
+    <div class="demo-card-event mdl-card mdl-shadow--2dp little">
+        <div class="mdl-card__title mdl-card--expand">
+            <h4 class="input">Get Front</h4>
         </div>
-    </a>
+    </div>
+    <div class="demo-card-event mdl-card mdl-shadow--2dp little">
+        <div class="mdl-card__title mdl-card--expand">
+            <h4 class="input">Get Right</h4>
+        </div>
+    </div>
 </div>
-
 </body>
 </html>
