set id in input.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 
     <title>Hack Surround</title>
 
-    <link href="//fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.2.1/material.indigo-pink.min.css">
     <link rel="stylesheet" href="style.css">
@@ -35,7 +34,7 @@
             <input class="mdl-textfield__input" type="text" id="id_peer">
             <label class="mdl-textfield__label" for="id_peer">Enter the id...</label>
         </div>
-        <button class="mdl-button mdl-js-button mdl-button--raised" id="send">Ok</button>
+        <button class="mdl-button mdl-js-button mdl-button--raised" id="send" onclick="setRemotePeerId()">Ok</button>
     </div>
 
     <div class="mdl-card__actions mdl-card--border">
