added audio tag and main.js

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Hack Surronund</title>
 
     <!-- Material Design Lite -->
-    <link href="//fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet" type="text/css">
+    <!--<link href="//fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet" type="text/css">-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.2.1/material.amber-deep_orange.min.css"/>
     <link rel="stylesheet" href="style.css">
@@ -70,8 +70,10 @@
             </a>
         </div>
     </div>
+    <audio controls autoplay></audio>
 </div>
 <script src="js/register.js"></script>
+<script src="js/main.js"></script>
 <script>
     $("#sender").click(function () {
         register("sender");
