--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- JQuery -->
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <!-- PeerJS -->
-    <script src="http://cdn.peerjs.com/0.3/peer.js"></script>
+    <script src="js/peer.js"></script>
 </head>
 <body>
 <div id="options">
