--- a/index.html
+++ b/index.html
@@ -140,11 +140,15 @@
             url: "https://hack-surround.firebaseio.com/receivers/" + selectedRadio + "/.json?auth=IxrO3PDuz4bvFvwrNbpIV48pISdjykYLrri3tNjB",
             success: function (json) {
                 console.log(json);
-                var peerToConnect;
+                var peersToConnect = [];
                 var keys = Object.keys(json);
-                var key = keys[keys.length-1];
-                peerToConnect = json[key].peerId;
-                initSender(peerToConnect);
+                console.log(keys);
+                for(var i in keys){
+                  var key = keys[i];
+                  peersToConnect.push(json[key].peerId);
+                }
+                initSender(peersToConnect);
+                //var key = keys[keys.length-1];
             },
             error: function(err){
                 console.log("error");
