--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
 </head>
 <body>
 
-    <nav>
-        <div class="nav-wrapper">
-            <a class="brand-logo center"><i class="material-icons">surround_sound</i>HackSurround</a>
-            <ul class="right hide-on-med-and-down">
-                <li><a href="https://github.com/jnssterrass/HackSorround"><i class="material-icons">code</i></a></li>
-                <li><a href="#modalinfo" class="modal-trigger"><i class="material-icons">info</i></a></li>
-            </ul>
-        </div>
-    </nav>
+<nav>
+    <div class="nav-wrapper">
+        <a class="brand-logo center"><i class="material-icons">surround_sound</i>HackSurround</a>
+        <ul class="right hide-on-med-and-down">
+            <li><a href="https://github.com/jnssterrass/HackSorround"><i class="material-icons">code</i></a></li>
+            <li><a href="#modalinfo" class="modal-trigger"><i class="material-icons">info</i></a></li>
+        </ul>
+    </div>
+</nav>
 
-    <div id="modalinfo" class="modal">
-      <div class="modal-content">
+<div id="modalinfo" class="modal">
+    <div class="modal-content">
         <h4>About</h4>
         <p>Awesome information</p>
     </div>
@@ -34,86 +34,98 @@
 </div>
 
 <div id="options" class="container center">
-  <div class="section">
+    <div class="section">
 
-    <h4>Which channel will you join?</h4>
-    <form action="#">
-        <p>
-          <input name="options" type="radio" id="left" value="left" checked/>
-          <label for="left">Left channel</label>
-      </p>
-      <p>
-          <input name="options" type="radio" id="center" value="center"/>
-          <label for="center">Center channel</label>
-      </p>
-      <p>
-          <input name="options" type="radio" id="right" value="right"/>
-          <label for="right">Right channel</label>
-      </p>
-  </form>
+        <h4>Which channel will you join?</h4>
+        <form action="#">
+            <p>
+                <input name="options" type="radio" id="front-left" value="front-left" checked/>
+                <label for="front-left">Front Left channel</label>
+            </p>
+            <p>
+                <input name="options" type="radio" id="center" value="center"/>
+                <label for="center">Center channel</label>
+            </p>
+            <p>
+                <input name="options" type="radio" id="front-right" value="front-right"/>
+                <label for="front-right">Front Right channel</label>
+            </p>
+            <p>
+                <input name="options" type="radio" id="back-left" value="back-left"/>
+                <label for="back-left">Back Left channel</label>
+            </p>
+            <p>
+                <input name="options" type="radio" id="back-right" value="back-right"/>
+                <label for="back-right">Back Right channel</label>
+            </p>
+        </form>
 
-</div>
-<div class="section">
+    </div>
+    <div class="section">
 
-    <h4>Select your role</h4>
-    <a id="receiver" class="waves-effect waves-light btn-large"><i class="material-icons left">hearing</i>Receiver</a>
-    <a id="sender" class="waves-effect waves-light btn-large"><i class="material-icons left">settings_input_antenna</i>Sender</a>
-</div>
-<div class="section center">
-    <audio id="audioplayer" controls autoplay style="display:none"></audio>
-</div>
+        <h4>Select your role</h4>
+        <a id="receiver" class="waves-effect waves-light btn-large"><i
+                class="material-icons left">hearing</i>Receiver</a>
+        <a id="sender" class="waves-effect waves-light btn-large"><i
+                class="material-icons left">settings_input_antenna</i>Sender</a>
+    </div>
+    <div class="section center">
+        <audio id="audioplayer" controls autoplay style="display:none"></audio>
+    </div>
 
-<div class="divider"></div>
+    <div class="divider"></div>
 
-<div class="section">
-    <div class="row">
-        <div class="col s4">
-          <div class="center promo promo-example">
-            <i class="material-icons large" style="color: #ee6e73">flash_on</i>
-            <p class="promo-caption">Very light</p>
-            <p class="light center">We did most of the heavy lifting for you to provide a simple web audio-sharing</p>
+    <div class="section">
+        <div class="row">
+            <div class="col s4">
+                <div class="center promo promo-example">
+                    <i class="material-icons large" style="color: #ee6e73">flash_on</i>
+                    <p class="promo-caption">Very light</p>
+                    <p class="light center">We did most of the heavy lifting for you to provide a simple web
+                        audio-sharing</p>
+                </div>
+            </div>
+            <div class="col s4">
+                <div class="center promo promo-example">
+                    <i class="material-icons large" style="color: #ee6e73">high_quality</i>
+                    <p class="promo-caption">Better quality</p>
+                    <p class="light center">By utilizing elements and principles of webRTC, we were able to create a
+                        tool that give the best sound quality</p>
+                </div>
+            </div>
+            <div class="col s4">
+                <div class="center promo promo-example">
+                    <i class="material-icons large" style="color: #ee6e73">settings</i>
+                    <p class="promo-caption">Easy to use</p>
+                    <p class="light center">Just share your receiver id with your friends and enjoy!</p>
+                </div>
+            </div>
         </div>
     </div>
-    <div class="col s4">
-      <div class="center promo promo-example">
-        <i class="material-icons large" style="color: #ee6e73">high_quality</i>
-        <p class="promo-caption">Better quality</p>
-        <p class="light center">By utilizing elements and principles of webRTC, we were able to create a tool that give the best sound quality</p>
-    </div>
-</div>
-<div class="col s4">
-  <div class="center promo promo-example">
-    <i class="material-icons large" style="color: #ee6e73">settings</i>
-    <p class="promo-caption">Easy to use</p>
-    <p class="light center">Just share your receiver id with your friends and enjoy!</p>
-</div>
-</div>
-</div>
-</div>
 
 </div>
 
 <footer class="page-footer">
-  <div class="container">
-    <div class="row">
-      <div class="col l6 s12">
-        <h5 class="white-text">HackSurround</h5>
-        <p class="grey-text text-lighten-4">Made with lots of love, coffee and some pizza</p>
-    </div>
-    <div class="col l4 offset-l2 s12">
-        <h5 class="white-text">HackB5Team</h5>
-        <ul>
-          <li><p class="grey-text text-lighten-3">Juan Salmerón · Eduard Maura</p></li>
-          <li><p class="grey-text text-lighten-3">Juan José Vázquez · Sergio Paredes</p></li>
-      </ul>
-  </div>
-</div>
-</div>
-<div class="footer-copyright">
     <div class="container">
-        © 2016 Upesé Copyright
+        <div class="row">
+            <div class="col l6 s12">
+                <h5 class="white-text">HackSurround</h5>
+                <p class="grey-text text-lighten-4">Made with lots of love, coffee and some pizza</p>
+            </div>
+            <div class="col l4 offset-l2 s12">
+                <h5 class="white-text">HackB5Team</h5>
+                <ul>
+                    <li><p class="grey-text text-lighten-3">Juan Salmerón · Eduard Maura</p></li>
+                    <li><p class="grey-text text-lighten-3">Juan José Vázquez · Sergio Paredes</p></li>
+                </ul>
+            </div>
+        </div>
     </div>
-</div>
+    <div class="footer-copyright">
+        <div class="container">
+            © 2016 Upesé Copyright
+        </div>
+    </div>
 </footer>
 
 <!-- Compiled and minified JavaScript -->
@@ -132,7 +144,7 @@
 
 <script>
     $("#sender").click(function () {
-        register("sender",sourcePeerId);
+        register("sender", sourcePeerId);
         var selectedRadio = $("input[name=options]:checked").val();
         $.ajax({
             type: "GET",
@@ -143,14 +155,14 @@
                 var peersToConnect = [];
                 var keys = Object.keys(json);
                 console.log(keys);
-                for(var i in keys){
-                  var key = keys[i];
-                  peersToConnect.push(json[key].peerId);
+                for (var i in keys) {
+                    var key = keys[i];
+                    peersToConnect.push(json[key].peerId);
                 }
                 initSender(peersToConnect);
                 //var key = keys[keys.length-1];
             },
-            error: function(err){
+            error: function (err) {
                 console.log("error");
                 console.log(err);
             }
@@ -164,9 +176,9 @@
 </script>
 
 <script>
-   $(document).ready(function(){
-    $('.modal-trigger').leanModal({closeButton: ".modal-close" });
-});
+    $(document).ready(function () {
+        $('.modal-trigger').leanModal({closeButton: ".modal-close"});
+    });
 </script>
 
 </body>
