--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <form action="#">
             <p>
                 <input name="options" type="radio" id="front-left" value="front-left" checked/>
-                <label for="front-left">Front Left channel</label>
+                <label for="front-left">Front-left channel</label>
             </p>
             <p>
                 <input name="options" type="radio" id="center" value="center"/>
@@ -48,15 +48,15 @@
             </p>
             <p>
                 <input name="options" type="radio" id="front-right" value="front-right"/>
-                <label for="front-right">Front Right channel</label>
+                <label for="front-right">Front-right channel</label>
             </p>
             <p>
                 <input name="options" type="radio" id="back-left" value="back-left"/>
-                <label for="back-left">Back Left channel</label>
+                <label for="back-left">Back-left channel</label>
             </p>
             <p>
                 <input name="options" type="radio" id="back-right" value="back-right"/>
-                <label for="back-right">Back Right channel</label>
+                <label for="back-right">Back-right channel</label>
             </p>
         </form>
 
